<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.sign_up.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="179dp"
            android:layout_height="95dp"
            android:src="@drawable/ic_logo"
            android:layout_marginTop="68dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/main"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_first"
            android:layout_marginTop="24dp"
            android:layout_width="328dp"
            android:layout_height="match_parent"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_last"
            android:layout_marginTop="8dp"
            android:layout_width="328dp"
            android:layout_height="match_parent"
            android:hint="@string/lastName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_email"
            android:layout_marginTop="8dp"
            android:layout_width="328dp"
            android:hint="@string/email"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailSubject" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_password"
            android:layout_marginTop="8dp"
            android:layout_width="328dp"
            android:layout_height="match_parent"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_repassword"
            android:layout_marginTop="8dp"
            android:layout_width="328dp"
            android:layout_height="match_parent"
            android:hint="@string/repassword">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_zareg"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:text="@string/zareg"
            android:layout_marginTop="24dp"/>

        <Button
            android:id="@+id/btn_have"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:text="@string/have"
            android:layout_marginTop="8dp"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_marginBottom="8dp"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>