<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.sign_in.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        
        <ImageView
            android:layout_width="179dp"
            android:layout_height="95dp"
            android:src="@drawable/ic_logo"
            android:layout_marginTop="130dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/main"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_email"
            android:layout_marginTop="104dp"
            android:layout_width="328dp"
            android:hint="@string/email"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailSubject" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_password"
            android:layout_marginTop="8dp"
            android:layout_width="328dp"
            android:layout_height="match_parent"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        
        <Button
            android:id="@+id/btn_si"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:layout_marginTop="106dp"/>

        <Button
            android:id="@+id/btn_su"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:text="@string/reg"
            android:layout_marginTop="8dp"
            style="@style/Widget.Material3.Button.OutlinedButton" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>